--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,4 +14,6 @@
     <color name="card_2">#F9E79F</color>
     <color name="card_3">#D7BDE2</color>
     <color name="card_4">#D2C3D8</color>
+
+    <color name="botones">#E3E3E3</color>
 </resources>
