--- a/app/src/main/res/layout/activity_favoritos.xml
+++ b/app/src/main/res/layout/activity_favoritos.xml
@@ -12,7 +12,7 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/listHoteles"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_above="@+id/bottom_navigation"
         android:layout_marginStart="10dp"
         android:layout_marginEnd="10dp" />
