--- a/app/src/main/res/layout/list_hoteles.xml
+++ b/app/src/main/res/layout/list_hoteles.xml
@@ -14,6 +14,7 @@
         android:layout_marginBottom="10dp">
 
         <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
+            android:id="@+id/cardViewHotel"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             card_view:cardCornerRadius="10dp"
