--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,4 +16,6 @@
     <color name="card_4">#D2C3D8</color>
 
     <color name="botones">#E3E3E3</color>
+
+    <color name="barra">#9F001F</color>
 </resources>
