--- a/app/src/main/res/layout/activity_mensajes.xml
+++ b/app/src/main/res/layout/activity_mensajes.xml
@@ -1,19 +1,79 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:cardview="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/light_white"
-    tools:context=".ui.view.MensajesActivity">
-
+    android:orientation="vertical"
+    android:background="#D0ECE7">
+    <LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="60dp"
+    android:orientation="vertical"
+    android:gravity="center"
+    android:layout_marginBottom="10dp"
+    android:background="@drawable/round_corner">
     <TextView
+        android:id="@+id/usuario"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:text="Mensajes Activity"
-        android:textSize="30sp"/>
+        android:paddingLeft="10dp"
+        android:text="Usuario"
+        android:layout_gravity="left"
+        />
+    </LinearLayout>
 
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_weight="1"
+        android:layout_margin="4dp">
+        <androidx.cardview.widget.CardView
+            cardview:cardCornerRadius="15dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:layout_margin="7dp">
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+                    <TextView
+                        android:id="@+id/contactoMensaje"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Contacto 1"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginLeft="15sp"
+                        android:layout_weight="1"/>
+                    <TextView
+                        android:id="@+id/horaMensajeUltimo"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="7sp"
+                        android:layout_marginRight="15sp"
+                        android:text="00:00"
+                        android:layout_gravity="center"/>
+                </LinearLayout>
+                <TextView
+                    android:id="@+id/ultimoMensaje"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Texto mensaje"
+                    android:layout_marginTop="3sp"
+                    android:layout_marginLeft="15sp"
+                    android:layout_marginBottom="10sp"
+                    android:layout_marginRight="10sp"
+                    />
+            </LinearLayout>
+        </androidx.cardview.widget.CardView>
+    </LinearLayout>
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_navigation"
         android:layout_width="match_parent"
@@ -27,4 +87,5 @@
         app:labelVisibilityMode="unlabeled"
         app:menu="@menu/my_navigation_items" />
 
-</RelativeLayout>
+</LinearLayout>
+
