Correccion de bugs

--- a/app/src/main/res/layout/activity_hotel.xml
+++ b/app/src/main/res/layout/activity_hotel.xml
@@ -83,10 +83,20 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="8dp"
             android:text="$150.00 noche"
-            android:textSize="20sp"
+            android:textSize="15sp"
             android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/tiempoReserva"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="15dp"
+            android:layout_marginTop="25dp"
+            android:text=""
+            android:textSize="15sp"
+            android:textStyle="italic" />
 
         <Button
             android:id="@+id/pay"
