--- a/app/src/main/res/layout/activity_mensajes.xml
+++ b/app/src/main/res/layout/activity_mensajes.xml
@@ -11,13 +11,14 @@
         android:orientation="vertical"
         android:layout_height="50dp"
         android:paddingLeft="10dp"
+        android:paddingRight="10dp"
         android:background="@drawable/round_corner"
         android:gravity="center">
         <TextView
             android:id="@+id/contactoMensaje"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="25dp"
+            android:textSize="18dp"
             android:textColor="#2E4053"
             android:textAlignment="center"/>
     </LinearLayout>
@@ -30,7 +31,7 @@
     </androidx.recyclerview.widget.RecyclerView>
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="50dp"
         android:orientation="horizontal"
         android:layout_margin="20dp">
             <EditText
@@ -43,8 +44,10 @@
                 android:textColorHint="@color/white"
                 android:backgroundTint="@color/white"
                 android:textSize="18dp"
+                android:minLines="2"
                 android:layout_marginEnd="10dp"
-                android:minHeight="38dp" />
+                android:minHeight="38dp"/>
+            <requestFocus/>
             <Button
                 android:id="@+id/btnAudio"
                 android:layout_width="50dp"
