--- a/app/src/main/res/layout/activity_hotel.xml
+++ b/app/src/main/res/layout/activity_hotel.xml
@@ -43,7 +43,6 @@
 
             </RelativeLayout>
 
-
             <RelativeLayout
                 android:id="@+id/especificacionesHotel"
                 android:layout_width="match_parent"
@@ -72,10 +71,21 @@
                     tools:text="@string/hotel_description" />
 
                 <TextView
-                    android:id="@+id/tvAddress"
+                    android:id="@+id/tvHotel_evaluation"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/tvHotel_description"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginTop="10dp"
+                    android:textColor="@color/black"
+                    android:textSize="15sp"
+                    tools:text="@string/hotel_valoraciones" />
+
+                <TextView
+                    android:id="@+id/tvAddress"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/tvHotel_evaluation"
                     android:layout_marginStart="10dp"
                     android:layout_marginTop="10dp"
                     android:textColor="@color/black"
@@ -198,12 +208,45 @@
                     android:textSize="15sp"
                     tools:text="-" />
 
+                <View
+                    android:id="@+id/divider2"
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:layout_below="@+id/extra"
+                    android:layout_marginTop="10dp"
+                    android:background="@drawable/background_shape" />
+
+                <TextView
+                    android:id="@+id/Mapa"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/divider2"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginTop="10dp"
+                    android:paddingBottom="10dp"
+                    android:text="@string/teencontraras"
+                    android:textColor="@color/black"
+                    android:textSize="20dp"
+                    android:textStyle="bold" />
+
+
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/especificacionesHotel">
+
+                <fragment
+                    android:id="@+id/map2"
+                    android:name="com.google.android.gms.maps.SupportMapFragment"
+                    android:layout_width="match_parent"
+                    android:layout_height="400dp" />
 
             </RelativeLayout>
 
         </RelativeLayout>
     </ScrollView>
-
     <RelativeLayout
         android:id="@+id/payment_container"
         android:layout_width="match_parent"
@@ -243,6 +286,9 @@
             android:layout_marginEnd="15dp"
             android:backgroundTint="@color/white"
             android:text="Pay Now" />
+
+
+
 
     </RelativeLayout>
 </RelativeLayout>
