--- a/app/src/main/res/layout/activity_home_login.xml
+++ b/app/src/main/res/layout/activity_home_login.xml
@@ -5,13 +5,18 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".homeLogin">
+    android:layout_gravity="center"
+    tools:context=".homeLogin"
+    android:background="#D0ECE7">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:padding="30dp">
+        android:layout_gravity="center"
+        android:padding="30dp"
+        android:layout_weight="1">
+
 
         <TextView
             android:id="@+id/textView_titulo"
@@ -20,6 +25,7 @@
             android:layout_gravity="center"
             android:paddingTop="10dp"
             android:text="@string/tituloLogin"
+            android:textStyle="bold"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:textColor="@color/black" />
 
@@ -41,38 +47,34 @@
         <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="25dp"
+            android:layout_marginTop="4dp"
             app:startIconDrawable="@drawable/ic_password"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+            app:passwordToggleEnabled="true"
             android:hint="@string/passwordLogin">
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/EditPasswordLogin"
-                android:inputType="text"
+                android:inputType="textPassword"
                 android:maxLength="50"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"/>
         </com.google.android.material.textfield.TextInputLayout>
-        <LinearLayout
-            android:id="@+id/linearLayoutButton"
+
+
+        <Button
+            android:id="@+id/botonIniciar"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginTop="25dp"
-            android:gravity="right">
-            <Button
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:text="@string/botonIniciar"
+            android:textColor="@color/white"
+            android:backgroundTint="#138D75" />
+        <Button
                 android:id="@+id/botonResgistrarse"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/botonRegistrarse"
-                android:layout_marginRight="25dp"
-                android:textColor="@color/black"
-                android:backgroundTint="@color/botones" />
-            <Button
-                android:id="@+id/botonIniciar"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/botonIniciar"
-                android:textColor="@color/black"
-                android:backgroundTint="@color/botones" />
-        </LinearLayout>
+                android:textColor="@color/white"
+                android:backgroundTint="#138D75" />
     </LinearLayout>
 </ScrollView>
