--- a/app/src/main/res/layout/activity_perfil.xml
+++ b/app/src/main/res/layout/activity_perfil.xml
@@ -78,7 +78,14 @@
                     android:layout_height="wrap_content"/>
             </com.google.android.material.textfield.TextInputLayout>
 
-
+            <Button
+                android:id="@+id/botonCerrarSesion"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/salir"
+                android:layout_marginTop="30dp"
+                android:textColor="@color/white"
+                android:backgroundTint="#138D75" />
         </LinearLayout>
     </ScrollView>
 
