--- a/app/src/main/res/layout/activity_favoritos.xml
+++ b/app/src/main/res/layout/activity_favoritos.xml
@@ -9,27 +9,59 @@
     android:background="@color/light_white"
     tools:context=".ui.view.FavoritosActivity">
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/listHoteles"
+    <RelativeLayout
+        android:id="@+id/seccion"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_above="@+id/bottom_navigation"
-        android:layout_marginStart="10dp"
-        android:layout_marginEnd="10dp" />
+        android:layout_height="60dp"
+        android:background="@drawable/round_corner"
+        android:backgroundTint="#34495E"
+        android:gravity="center"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/TituloChat"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/favActivity"
+            android:textAlignment="center"
+            android:textColor="@color/white"
+            android:textSize="18dp" />
+    </RelativeLayout>
 
 
-    <com.google.android.material.bottomnavigation.BottomNavigationView
-        android:id="@+id/bottom_navigation"
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:background="@drawable/round_corner"
-        android:elevation="2dp"
-        app:itemIconSize="30dp"
-        app:itemIconTint="@drawable/item_selector"
-        app:itemRippleColor="@android:color/transparent"
-        app:labelVisibilityMode="unlabeled"
-        app:menu="@menu/my_navigation_items" />
+        android:orientation="vertical"
+        android:layout_below="@+id/seccion">
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/listHoteles"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_above="@+id/bottom_navigation"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="10dp" />
+
+        <com.google.android.material.bottomnavigation.BottomNavigationView
+            android:id="@+id/bottom_navigation"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:background="@drawable/round_corner"
+            android:elevation="2dp"
+            app:itemIconSize="30dp"
+            app:itemIconTint="@drawable/item_selector"
+            app:itemRippleColor="@android:color/transparent"
+            app:labelVisibilityMode="unlabeled"
+            app:menu="@menu/my_navigation_items" />
+
+
+
+    </RelativeLayout>
+
+
+
 
 
 </RelativeLayout>
